force-app/main/default/objects/Service_Center_Address__c/Service_Center_Address__c.object-meta.xml
<CustomObject>
    <label>Service Center Address</label>
    <nameField>
        <label>Service Center Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Center Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>