force-app/main/default/objects/Service_Center_Address__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the service center still in place?</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>