force-app/main/default/objects/Service_Center_Address__c/fields/JDE_External_ID__c.field-meta.xml
<CustomField>
    <fullName>JDE_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>JDE External ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>