force-app/main/default/objects/Service_Center_Address__c/fields/SOM_Name__c.field-meta.xml
<CustomField>
    <fullName>SOM_Name__c</fullName>
    <label>SOM Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>