force-app/main/default/objects/Service_Center_Address__c/fields/SOM_Phone__c.field-meta.xml
<CustomField>
    <fullName>SOM_Phone__c</fullName>
    <label>SOM Phone</label>
    <type>Phone</type>
</CustomField>