force-app/main/default/objects/Service_Center_Address__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>