force-app/main/default/objects/Service_Center_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>City__c</columns>
    <columns>SOM_Name__c</columns>
    <columns>Street_Address__c</columns>
    <columns>JDE_External_ID__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <columns>SOM_Phone__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>